--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "axios": "^0.19.2",
     "eslint-config-prettier": "^6.11.0",
     "plugin": "^0.3.3",
     "prettier": "^2.0.5",
