--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.10.3",
     "@react-native-community/masked-view": "^0.1.10",
     "axios": "^0.19.2",
     "eslint-config-prettier": "^6.11.0",
     "plugin": "^0.3.3",
     "prettier": "^2.0.5",
+    "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
